Note: Requires new RCT to not crash.


Version 5.0.0
-------------
Non-Standard Operations (NSO) table for thruster firings & saturation up until 2021-01-26.
Better output CDF standards compliance.
Using new L2 master CDFs.


Version 6.0.0
-------------
Non-Standard Operations (NSO) table thruster firings updated for until 2021-09-11.
Using new L2 master CDFs.
Sets CDF zVariable attributes SCALEMIN & SCALEMAX using zVar min & max values.
Disabled excessive log messages for processing L1/L1R-->L2 LFR SWF representing sequences of CDF records.
Permits HK and science input datasets to not overlap at all in order to salvage some LFR DC data. Previously only allowed for partial datasets (otherwise error).


Version 6.0.1
-------------
Non-Standard Operations (NSO) table thruster firings updated for until 2022-09-03.
Bugfix: Use LFR's R0/R1/R2 for splitting into time intervals. This bugfix should keep some LFR L2 data that was previously deleted.
Addresses https://gitlab.obspm.fr/ROC/RCS/BICAS/-/issues/71 by not producing any .matlab_datastore_* file.


Version 6.0.2
-------------
Bugfix: Corrected algorithm/formula for calculating Ez_SRF (vdccal.m).
Recalculated and added E-field calibration data. Now covers 2020-02-28 to 2022-12-03.
Non-Standard Operations (NSO) table thruster firings updated for until 2022-12-17.


Version 7.0.0
-------------
Using new L2 master CDFs with corrections for DELTA_PLUS/MINUS_VAR, APPLICABLE, Data_type.
Non-Standard Operations (NSO) table thruster firings updated for until 2023-02-05.


Version X.Y.Z
-------------
Changed setting names:
    PROCESSING.L2-CWF-DWNS.ZV_QUALITY_FLAG_MIN
--> PROCESSING.L2-CWF-DSR.ZV_QUALITY_FLAG_MIN
    SW_MODES.L2-L2_CWF-DWNS_ENABLED
--> SWM.L2-L2_CWF-DSR_ENABLED
    SW_MODES.L1-L2_ENABLED
--> SWM.L1-L2_ENABLED
    SW_MODES.L2-L2_CWF-DSR_ENABLED
--> SWM.L2-L2_CWF-DSR_ENABLED
    SW_MODES.L2-L3_ENABLED
--> SWM.L2-L3_ENABLED
Change name of s/w mode:
    LFR-SURV-CWF-E-DWNS
--> LFR-SURV-CWF-E-DSR