@@ -17,9 +17,9 @@ function Swml = get_SWML(SETTINGS, L)
     %   multiple redundant 1D(?) vectors that covers every case. Then
     %   set various cases by assigning constants to many elements using
     %   MATLAB syntax. One index representing: Combination of
-    %   DATASET_ID+Skeleton_Version (both pipelines, LFR+TDS, HK+SCI),
+    %   DSI+Skeleton_Version (both pipelines, LFR+TDS, HK+SCI),
     %   every element contains data for that dataset. Must use
-    %   combination DATASET_ID+Skeleton_Version to potentially cover old
+    %   combination DSI+Skeleton_Version to potentially cover old
     %   versions. Manipulate and set multiple elements smoothly by using
     %   vectors for indices.
     %   Ex: Vectors to set: skeletonVersionVector, SBMx_SURV_vector,
@@ -128,8 +128,8 @@ function Swml = get_SWML(SETTINGS, L)
                     InputDatasetsMap, ...
                     rctDir, ...
                     NsoTable, ...
-                    SciInputDataset.datasetId, ...
-                    SciOutputDataset.datasetId, ...
+                    SciInputDataset.dsi, ...
+                    SciOutputDataset.dsi, ...
                     SETTINGS, L), ...
                 strmod('LFR-<SBMx/SURV>-<C/SWF>-E<SWM suffix>'), ...
                 strmod(...
@@ -169,8 +169,8 @@ function Swml = get_SWML(SETTINGS, L)
                     InputDatasetsMap, ...
                     rctDir, ...
                     NsoTable, ...
-                    SciInputDataset.datasetId, ...
-                    SciOutputDataset.datasetId, ...
+                    SciInputDataset.dsi, ...
+                    SciOutputDataset.dsi, ...
                     SETTINGS, L), ...
                 strmod('TDS-LFM-<C/RSWF>-E<SWM suffix>'), ...
                 strmod(...
