@@ -98,18 +98,18 @@ function execute_SWM(...
                 ' of) the global attribute Dataset_ID.\n    File: "%s"'], ...
                 inputFilePath)
         end
-        cdfDatasetId = InputDataset.Ga.Dataset_ID{1};
+        cdfDsi = InputDataset.Ga.Dataset_ID{1};
 
-        if ~strcmp(cdfDatasetId, SwmInfo.inputsList(i).datasetId)
+        if ~strcmp(cdfDsi, SwmInfo.inputsList(i).dsi)
             [settingValue, settingKey] = SETTINGS.get_fv(...
-                'INPUT_CDF.GA_DATASET_ID_MISMATCH_POLICY');
+                'INPUT_CDF.GA_DSI_MISMATCH_POLICY');
             anomalyDescrMsg = sprintf(...
-                ['The input CDF dataset''s stated DATASET_ID does', ...
+                ['The input CDF dataset''s stated DSI does', ...
                 ' not match value expected from the S/W mode.\n', ...
                 '    File: %s\n', ...
                 '    Global attribute InputDataset.Ga.Dataset_ID{1} : "%s"\n', ...
                 '    Expected value:                                : "%s"\n'], ...
-                inputFilePath, cdfDatasetId, SwmInfo.inputsList(i).datasetId);
+                inputFilePath, cdfDsi, SwmInfo.inputsList(i).dsi);
             bicas.default_anomaly_handling(L, ...
                 settingValue, settingKey, ...
                 'E+W+illegal', anomalyDescrMsg, 'BICAS:DatasetFormat')
@@ -166,7 +166,7 @@ function execute_SWM(...
         masterCdfPath = fullfile(...
             masterCdfDir, ...
             bicas.get_master_CDF_filename(...
-                OutputInfo.datasetId, ...
+                OutputInfo.dsi, ...
                 OutputInfo.skeletonVersion));
 
         if ~settingNpefValue
@@ -177,7 +177,7 @@ function execute_SWM(...
 
             GaSubset = bicas.derive_output_dataset_GlobalAttributes(...
                 InputDatasetsMap, OutputDataset, ...
-                irf.fs.get_name(outputFilePath), OutputInfo.datasetId, ...
+                irf.fs.get_name(outputFilePath), OutputInfo.dsi, ...
                 SETTINGS, L);
         else
             % CASE: No processing.
