@@ -115,6 +115,8 @@ Changed setting names:
 --> SWM.L2-L2_CWF-DSR_ENABLED
     SW_MODES.L2-L3_ENABLED
 --> SWM.L2-L3_ENABLED
+    INPUT_CDF.GA_DATASET_ID_MISMATCH_POLICY
+--> INPUT_CDF.GA_DSI_MISMATCH_POLICY
 Change name of s/w mode:
     LFR-SURV-CWF-E-DWNS
 --> LFR-SURV-CWF-E-DSR
